pierwsze wypchnięcie działającego kodu

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
-zadanie_domowe9.ipynb
+.env
+logs.log
+halfmarathon_wroclaw_2023__final.csv
+halfmarathon_wroclaw_2024__final.csv
+data/
+mapa.md
+zad_dom_9.ipynb
