--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit>=1.33
-openai>=1.30
-pandas>=2.0
-numpy>=1.24
-scikit-learn>=1.3
-python-dotenv>=1.0.0
-pycaret>=3.0
-langfuse>=2.0
+streamlit==1.48.0
+openai==1.61.2
+pandas==2.1.4
+numpy==1.24
+scikit-learn==1.4.2
+python-dotenv==1.1.0
+pycaret==3.3.2
+langfuse==2.51.4 # Zmieniono z 2.0 na 2.51.4
