--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.48.0
-openai==1.61.2
+streamlit>=1.48.0
+openai==1.62.0
 pandas==2.1.4
-numpy==1.24
+# numpy==1.24
 scikit-learn==1.4.2
 python-dotenv==1.1.0
 pycaret==3.3.2
