--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,7 @@
 streamlit>=1.48.0
 openai==1.62.0
 pandas==2.1.4
-# numpy==1.24
 scikit-learn==1.4.2
 python-dotenv==1.1.0
 pycaret==3.3.2
-langfuse==2.51.4 # Zmieniono z 2.0 na 2.51.4
-
-#openai==1.98.0 # było 1.47.0
-#langfuse==2.40.0
-#streamlit==1.24.0
-#python-dotenv==1.1.1
+langfuse==2.51.4 
